# binance-mcp

./: .gitignore  LANGGRAPH_MCP_GUIDE.md  LICENSE  MANIFEST.in  MCP_CONFIG_GUIDE.md  README.md  check_permissions.py  debug_unified_account.py  demo_tools.py  diagnose_permissions.py  futures_test_demo.py  integration_test.py  list_tools.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  shib_trading_test.py  test_langgraph_mcp.py  test_start.py
binance_mcp/: __init__.py  broker.py  cli.py  config.py  server.py  simple_server.py  tools.py
examples/: test_unified_trading.py
tests/: __init__.py  conftest.py
tests/unit/: test_broker_simple.py  test_config.py  test_tools_simple.py
